# predictive-maintenance-risk

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  readme.md
configs/: anomaly.yaml  backtest.yaml  base.yaml  features.yaml  sequence.yaml  split.yaml  thresholds.yaml
docs/: cloud_artifacts.md  contracts.md  decision_log.md  leakage_rules.md  problem.md
notebooks/: eda_fd001.ipynb  model_evaluation.ipynb
reports/: anomaly_eval.md  backtest_calibration.md  baseline_eval.md  model_comparison.json  model_comparison.md
scripts/: bench_inference.py  compare_all_models.py  publish_artifacts.py  quick_train_sequence.py  smoke_test.sh
src/pmrisk/: config.py
src/pmrisk/anomaly/: isoforest.py  run.py
src/pmrisk/data/: make_processed.py
src/pmrisk/eval/: backtest.py  calibration.py  errors.py  metrics.py  thresholds.py
src/pmrisk/features/: contracts.py  sequence.py  tabular.py
src/pmrisk/labeling/: labels.py
src/pmrisk/models/: model_builder.py  model_versions.py  (+6 more)
tests/: test_anomaly.py  test_api_contracts.py  test_artifacts.py  test_backtest.py  test_bench_inference_smoke.py  test_calibration.py  test_config.py  test_errors.py  test_features_tabular.py  test_import.py  test_labeling.py  test_model_builder.py  test_model_versions.py  test_production_store.py  test_quality.py  test_sequence.py  test_sequence_cnn.py  test_sequence_gru.py  test_sequence_pipeline.py  test_smoke_imports.py  test_split.py  test_threshold_policy.py  test_threshold_policy_sequence.py  test_torch_dataset.py  test_train_sequence_smoke.py
(+7 files in other folders)
