[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pm-risk"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "pandas",
  "scikit-learn",
  "PyYAML",
  "pytest",
  "pydantic>=2.0",
  "pydantic-settings",
  "joblib",
  "lightgbm",
]

[project.optional-dependencies]
serving = ["fastapi", "uvicorn"]
dl = ["torch"]
data = ["pyarrow"]
viz = ["matplotlib"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
